# complex_systems

./: .gitignore  README.md  conf.py  demo.ipynb  demo.md  demo_st.py  extras_require_dev.txt  extras_require_streamlit.txt  index.rst  install_requires.txt  requirements.txt  setup.cfg
.github/workflows/: sphinx.yml
demo/: demo.ipynb  demo.md
docs/: conf.py
mcs/: __init__.py  ca.py  de.py  mcs.py  net.py  ode.py  pde.py
