[metadata]
name = modeling-complex-systems
version = attr: mcs.__version__
url = https://github.com/yuanx749/complex_systems
project_urls =
    Bug Tracker = https://github.com/yuanx749/complex_systems/issues
author = Xiao Yuan
author_email = yuanx749@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
description = A Python package for studying complex systems.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jupyter, numpy, networkx, pep8

[options]
install_requires =
    numpy
    matplotlib
    networkx
    notebook
python_requires = >=3.7
packages = find:
package_dir =
    = .

[options.extras_require]
dev = 
    flake8
    pytest

[options.packages.find]
where = .

[flake8]
ignore =
    W605,
    F401,
    E226
exclude =
    .venv
