[metadata]
name = modeling-complex-systems
version = attr: mcs.__version__
url = https://github.com/yuanx749/complex_systems
project_urls =
    Bug Tracker = https://github.com/yuanx749/complex_systems/issues
author = Xiao Yuan
author_email = yuanx749@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
description = A Python package for studying complex systems.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jupyter, numpy, networkx, scipy, pep8, streamlit

[options]
install_requires = file: install_requires.txt
python_requires = >=3.8
packages = find:
package_dir =
    = .

[options.extras_require]
dev = file: extras_require_dev.txt
streamlit = file: extras_require_streamlit.txt

[options.packages.find]
where = .

[flake8]
ignore =
    W605,
    F401,
    E226,
    E501
exclude =
    .venv
